[gd_scene load_steps=7 format=3 uid="uid://sbseylgpog5c"]

[ext_resource type="Script" uid="uid://wv6pdypeqsv7" path="res://scripts/ui/menues/main_menu_ui.gd" id="1_ktben"]
[ext_resource type="Texture2D" uid="uid://vyqo2mn1xvu3" path="res://art/ui/tiles/tile_0002.png" id="2_ds3em"]
[ext_resource type="AudioStream" uid="uid://rhnq4yy51v33" path="res://art/sound/music/main_menu_music.mp3" id="3_ar7nb"]
[ext_resource type="Theme" uid="uid://cm2fomdb61et5" path="res://themes/custom_theme.tres" id="3_hx66e"]
[ext_resource type="Script" uid="uid://6aelr2g0dpvu" path="res://scripts/ui/generic/button_with_sound.gd" id="5_ar7nb"]
[ext_resource type="Texture2D" uid="uid://b2ro32smbm8p3" path="res://art/ui/tiles/tile_0001.png" id="5_hx66e"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("_credits_modal")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_hx66e")
script = ExtResource("1_ktben")
_music = ExtResource("3_ar7nb")
_credits_modal = NodePath("CreditsModal")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ds3em")
patch_margin_left = 9
patch_margin_top = 11
patch_margin_right = 8
patch_margin_bottom = 11

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.5
offset_top = -152.5
offset_right = 197.5
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameTitle" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 80
text = "Run Together"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("3_hx66e")
text = "Play"
script = ExtResource("5_ar7nb")

[node name="TutorialButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("3_hx66e")
text = "Tutorial"
script = ExtResource("5_ar7nb")

[node name="SettingsButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("3_hx66e")
text = "Settings"
script = ExtResource("5_ar7nb")

[node name="CreditsButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("3_hx66e")
text = "Credits"
script = ExtResource("5_ar7nb")

[node name="QuitButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("3_hx66e")
text = "Quit"
script = ExtResource("5_ar7nb")

[node name="CreditsModal" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="CreditsModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_hx66e")
patch_margin_left = 9
patch_margin_top = 8
patch_margin_right = 7
patch_margin_bottom = 9

[node name="MarginContainer" type="MarginContainer" parent="CreditsModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Content" type="VBoxContainer" parent="CreditsModal/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="CreditsModal/MarginContainer/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CreditsModal/MarginContainer/Content"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer"]
layout_mode = 2

[node name="Dev" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/Dev"]
layout_mode = 2
text = "Dev: "

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/Dev"]
layout_mode = 2
text = "Tomas Duggan"

[node name="Art" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/Art"]
layout_mode = 2
text = "Art: "

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/Art"]
layout_mode = 2
text = "Craftpix"

[node name="MainMenuMusic" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/MainMenuMusic"]
layout_mode = 2
text = "Main Menu music:"

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/MainMenuMusic"]
layout_mode = 2
text = "CorentinGazon *"

[node name="ShopMusic" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/ShopMusic"]
layout_mode = 2
text = "Shop music:"

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/ShopMusic"]
layout_mode = 2
text = "M-Murray *"

[node name="CombatMusic" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/CombatMusic"]
layout_mode = 2
text = "Combat music (short):"

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/CombatMusic"]
layout_mode = 2
text = "guillermochicasonido *"

[node name="CoinSfx" type="HBoxContainer" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Key" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/CoinSfx"]
layout_mode = 2
text = "Purchase SFX:"

[node name="Value" type="Label" parent="CreditsModal/MarginContainer/Content/MarginContainer/VBoxContainer/CoinSfx"]
layout_mode = 2
text = "LittleRobotSoundFactory *"

[node name="Info" type="Label" parent="CreditsModal/MarginContainer/Content"]
layout_mode = 2
text = "* CC 4.0, Link in itch.io project"

[node name="CloseCreditsButton" type="Button" parent="CreditsModal"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 46.670654
grow_horizontal = 0
text = "X"
script = ExtResource("5_ar7nb")

[connection signal="pressed" from="HBoxContainer/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CreditsModal/CloseCreditsButton" to="." method="_on_close_credits_button_pressed"]
